# coaster

./: .gitignore  README.md  pyproject.toml  workbench.ipynb
coaster/: __init__.py  preprocessing.py  tokenizer.py
coaster/data/: __init__.py  dataset.py  rc_aug.py  real_data.py  synthetic.py
coaster/model/: __init__.py  config.py  decoder.py  encoder.py  layers.py  read_model.py  transformer.py
coaster/training/: __init__.py  trainer.py
configs/: default.yaml
data/: test_read_lengths.parquet
evals/: compare.py  compute_coverage.py  eval_modal.py  generate.py  run_eval.sh  visualize.py
evals/realizability/: __init__.py  bounds.py  deconvolve.py  kernel.py  per_window.py  plots.py  spectrum.py
notebooks/: playground.ipynb
scripts/: align_modal.py  analyze_realizability.py  download_sra.py  extract_reads_modal.py  run_realizability.py  train.py  train_modal.py
specs/: generative_s2e_handoff.md  pointer-factorized.md
tests/: test_data.py  test_layers.py  test_model.py  test_preprocessing.py  test_read_model.py  test_realizability.py  test_synthetic_data.py  test_tokenizer.py  test_trainer.py  test_training.py
