[project]
name = "coaster"
version = "0.1.0"
description = "DNA-to-RNA encoder-decoder transformer modeling yeast transcription"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.55.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "biopython>=1.83",
    "gcsfs>=2024.1.0",
    "datasets>=2.16.0",
    "ipykernel>=7.2.0",
    "modal>=0.73.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
